--- a/projectMarvel/loginPage.html
+++ b/projectMarvel/loginPage.html
@@ -7,45 +7,37 @@
     </head>
     <body>
 <div class="titleDisplay">
-<img class="logoFixer"  src="/home/karthik/Downloads/avengers-logo-removebg-preview.png" alt="avengers">
+<img class="logoFixer"  src="/home/z0407@ad.ziffity.com/Documents/projectMarvel/Avengers.png" alt="avengers">
 <h1 class="titleText">Marvel-know about it</h1>
 
 </div>
         <div class="block glow">
 <div class="firstBlock">
-   <marquee>
+<div class="images">
+  <img class="marvelImages" src="/home/z0407@ad.ziffity.com/Documents/projectMarvel/Thor.png" alt="thor">
+</div>
 
-    <img class="imageRaoate" src="/home/karthik/Downloads/_.jpeg" alt="">
-    <img class="imageRaoate" src="/home/karthik/Downloads/Marvel HD Wallpapers 4K Mobile.jpeg" alt="">
-    <img class="imageRaoate" src="/home/karthik/Downloads/Avengers assemble in 22 'Infinity War' character posters.jpeg" alt="">
-    <img class="imageRaoate"  src="/home/karthik/Downloads/_ (1).jpeg" alt="">
-    <img class="imageRaoate" src="/home/karthik/Downloads/Hulk.jpeg" alt="">
-    <img class="imageRaoate" src="/home/karthik/Downloads/natasha.jpeg" alt="">
-    <img class="imageRaoate"  src="/home/karthik/Downloads/captainMarvel.jpeg" alt="">
-    <img class="imageRaoate" src="/home/karthik/Downloads/_ (2).jpeg" alt="">
+  <pre>
+welcome to the world of Marvel...
+  you will know the powers
+      of each character
+</pre>
 
-</marquee>
 </div>
 
 <div class="secondBlock">
 <center>
-        <h2>Login</h2>
+       
         <form>
-          <div class="user-box">
-            <input type="text">
-            <label>Username</label>
-          </div>
-          <div class="user-box">
-            <input type="password">
-            <label>Password</label>
-          </div>
-          <a href="#">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            Submit
-          </a>
+          <h1 style="color: white;">Login</h1>
+          <br><br><br>
+       <input type="text" placeholder="Enter user name">
+       <br><br><br>
+       <input type="password" placeholder="Enter Password">
+       <br><br>
+       <a href="#" class="forgotLink">forgot password</a>
+       <br><br><br><br><br><br>
+       <input type="submit">
         </form>
      
 </center>
